# NovaStyle

./: .env  .gitignore  App.tsx  CHANGELOG.md  FINAL_TEST_REPORT.md  OPTIMIZATION.md  OPTIMIZATION_PROPOSAL.md  PATCH_v2.3.md  README.md  RELEASE_NOTES.md  SECURITY.md  StyleMarket.tsx  TEST_PLAN.md  TEST_REPORT.md  TEST_v2.3.md  aiService.ts  animations.css  geminiService.ts  index.html  metadata.json  package-lock.json  package.json  pre-push-check.sh  start.sh  test-api.js  test-chunking.js  test-input.txt  types.ts
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
